# rust-sentiment-analysis-trading

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
docs/: API.md  architecture.mmd  pipeline.mmd
examples/: advanced_analysis.rs  benchmark.rs  sentiment_analysis.rs
src/: lib.rs  main.rs  types.rs
src/correlation/: mod.rs
src/dashboard/: mod.rs
src/nlp/: mod.rs
src/scrapers/: mod.rs
src/signals/: mod.rs
tests/: test_main.rs
